--- a/landingsite/templates/landingsite/index.html
+++ b/landingsite/templates/landingsite/index.html
@@ -65,7 +65,7 @@
             <nav class="android-navigation mdl-navigation">
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Blog</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Weekly Meetings</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Events</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Hacks</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">About us</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Contact us</a>
             </nav>
@@ -108,7 +108,7 @@
           <div class="android-font android-slogan">print ("Hello World")</div>
           <div class="android-font android-sub-slogan">Welcome to Code for Everyone... be yourself. do your thing. see what's going on.</div>
           <div class="android-font android-create-character">
-            <a href=""><img src="{% static 'landingsite/images/andy.png' %}"> create your first website</a>
+            <a href=""><img src="{% static 'landingsite/images/andy.png' %}" style="color:#ffffff;"> create your first website</a>
           </div>
 
           <a href="#screens">
@@ -119,21 +119,31 @@
         </div>
         <div class="android-customized-section">
           <div class="android-customized-section-text">
-            <div class="mdl-typography--font-light mdl-typography--display-1-color-contrast">Teach programming openly and freely with biweekly meetups</div>
+            <div id="screens" class="mdl-typography--font-light mdl-typography--display-1-color-contrast">Teach programming openly and freely with biweekly meetups</div>
             <p class="mdl-typography--font-light">
 
               <br>
               <a href="" class="android-link mdl-typography--font-light"></a>
             </p>
           </div>
-          <div id="screens" class="android-customized-section-image" style="background: url( {% static 'landingsite/images/slide03.jpg' %}) center top no-repeat;"></div>
+          <div  class="android-customized-section-image" style="background: url( {% static 'landingsite/images/slide03.jpg' %}) center top no-repeat;"></div>
         </div>
-        <div class="android-wear-section" style="background: url( {% static 'landingsite/images/code.jpg' %}) center top no-repeat;">
+        <div class="android-customized-section">
+          <div class="android-customized-section-text">
+            <div class="mdl-typography--font-light mdl-typography--display-1-color-contrast">Workshops/hackathons</div>
+            <p class="mdl-typography--font-light">
+
+              <br>
+              <a href="" class="android-link mdl-typography--font-light"></a>
+            </p>
+          </div>
+          <div  class="android-customized-section-image" style="background: url( {% static 'landingsite/images/code.jpg' %}) center top no-repeat;"></div>
+        </div>
+        <div class="android-wear-section" style="background: url( {% static 'landingsite/images/hack.jpg' %}) center top no-repeat;">
           <div class="android-wear-band">
             <div class="android-wear-band-text">
-              <div class="mdl-typography--display-2 mdl-typography--font-thin">  Workshops/hackathons</div>
+              <div class="mdl-typography--display-2 mdl-typography--font-thin">Work for nonprofit</div>
               <p class="mdl-typography--headline mdl-typography--font-thin">
-                Work for nonprofit
               </p>
               <p>
                 <!-- <a class="mdl-typography--font-regular mdl-typography--text-uppercase android-alt-link" href=""> -->
