made first migrations for hack app

--- a/hacks/templates/hacks/hacks_home.html
+++ b/hacks/templates/hacks/hacks_home.html
@@ -65,7 +65,7 @@
             <nav class="android-navigation mdl-navigation">
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Blog</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Weekly Meetings</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Hacks</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/hacks/">Hacks</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">About us</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Contact us</a>
             </nav>
@@ -104,11 +104,11 @@
       <div class="android-content mdl-layout__content">
         <a name="top"></a>
         <div class="android-be-together-section mdl-typography--text-center" style="background: url({% static 'landingsite/images/hack.jpg' %})
-        center 30% no-repeat;">
-          <div class="android-font android-slogan">print ("Hello World")</div>
-          <div class="android-font android-sub-slogan">Welcome to Code for Everyone... be yourself. do your thing. see what's going on.</div>
+        center 30% no-repeat;height:400px;">
+          <div class="android-font android-slogan"></div>
+          <div class="android-font android-sub-slogan"></div>
           <div class="android-font android-create-character">
-            <a href=""><img src="{% static 'landingsite/images/andy.png' %}" style="color:#ffffff;"> create your first website</a>
+            <a href=""><img src="{% static 'landingsite/images/andy.png' %}" style="color:#ffffff;"></a>
           </div>
 
           <a href="#screens">
@@ -118,21 +118,21 @@
           </a>
         </div>
         <div class="android-more-section">
-          <div class="android-section-title mdl-typography--display-1-color-contrast">More from Android</div>
+          <div class="android-section-title mdl-typography--display-1-color-contrast">Dumy text</div>
           <div class="android-card-container mdl-grid">
             <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
               <div class="mdl-card__media">
                 <img src="images/more-from-1.png">
               </div>
               <div class="mdl-card__title">
-                 <h4 class="mdl-card__title-text">Get going on Android</h4>
+                 <h4 class="mdl-card__title-text">Dumy Title</h4>
               </div>
               <div class="mdl-card__supporting-text">
                 <span class="mdl-typography--font-light mdl-typography--subhead">Four tips to make your switch to Android quick and easy</span>
               </div>
               <div class="mdl-card__actions">
                  <a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="">
-                   Make the switch
+                  Learn More
                    <i class="material-icons">chevron_right</i>
                  </a>
               </div>
@@ -143,14 +143,14 @@
                 <img src="images/more-from-4.png">
               </div>
               <div class="mdl-card__title">
-                 <h4 class="mdl-card__title-text">Create your own Android character</h4>
+                 <h4 class="mdl-card__title-text">Dumy Titl</h4>
               </div>
               <div class="mdl-card__supporting-text">
                 <span class="mdl-typography--font-light mdl-typography--subhead">Turn the little green Android mascot into you, your friends, anyone!</span>
               </div>
               <div class="mdl-card__actions">
                  <a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="">
-                   androidify.com
+                  Learn More
                    <i class="material-icons">chevron_right</i>
                  </a>
               </div>
@@ -161,14 +161,14 @@
                 <img src="images/more-from-2.png">
               </div>
               <div class="mdl-card__title">
-                 <h4 class="mdl-card__title-text">Get a clean customisable home screen</h4>
+                 <h4 class="mdl-card__title-text">Dumy Titl</h4>
               </div>
               <div class="mdl-card__supporting-text">
                 <span class="mdl-typography--font-light mdl-typography--subhead">A clean, simple, customisable home screen that comes with the power of Google Now: Traffic alerts, weather and much more, just a swipe away.</span>
               </div>
               <div class="mdl-card__actions">
                  <a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="">
-                   Download now
+                   Learn More
                    <i class="material-icons">chevron_right</i>
                  </a>
               </div>
@@ -179,21 +179,21 @@
                 <img src="images/more-from-3.png">
               </div>
               <div class="mdl-card__title">
-                 <h4 class="mdl-card__title-text">Millions to choose from</h4>
+                 <h4 class="mdl-card__title-text">Dumy Titl</h4>
               </div>
               <div class="mdl-card__supporting-text">
                 <span class="mdl-typography--font-light mdl-typography--subhead">Hail a taxi, find a recipe, run through a temple – Google Play has all the apps and games that let you make your Android device uniquely yours.</span>
               </div>
               <div class="mdl-card__actions">
                  <a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="">
-                   Find apps
+                   Learn More
                    <i class="material-icons">chevron_right</i>
                  </a>
               </div>
             </div>
           </div>
         </div>
-        
+
         <footer class="android-footer mdl-mega-footer">
           <div class="mdl-mega-footer--top-section">
             <div class="mdl-mega-footer--left-section">
