--- a/landingsite/templates/landingsite/index.html
+++ b/landingsite/templates/landingsite/index.html
@@ -65,7 +65,7 @@
             <nav class="android-navigation mdl-navigation">
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Blog</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Weekly Meetings</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Hacks</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/hacks/">Hacks</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">About us</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Contact us</a>
             </nav>
