refined templates for hacks home and entry pages

--- a/hacks/templates/hacks/hacks_home.html
+++ b/hacks/templates/hacks/hacks_home.html
@@ -105,39 +105,47 @@
         <a name="top"></a>
         <div class="android-be-together-section mdl-typography--text-center" style="background: url({% static 'landingsite/images/hack.jpg' %})
         center 30% no-repeat;height:400px;">
-          <div class="android-font android-slogan"></div>
+          <div class="android-font android-slogan">Seminars and Hacks</div>
           <div class="android-font android-sub-slogan"></div>
           <div class="android-font android-create-character">
             <a href=""><img src="{% static 'landingsite/images/andy.png' %}" style="color:#ffffff;"></a>
           </div>
 
-          <a href="#screens">
+          <a href="#posts">
             <button class="android-fab mdl-button mdl-button--colored mdl-js-button mdl-button--fab mdl-js-ripple-effect">
               <i class="material-icons">expand_more</i>
             </button>
           </a>
         </div>
         <div class="android-more-section">
-          <div class="android-section-title mdl-typography--display-1-color-contrast">Dumy text</div>
-          <div class="android-card-container mdl-grid">
+          <div class="android-section-title mdl-typography--display-1-color-contrast">Check them out</div>
+          <div class="android-card-container mdl-grid" id="posts">
+            {% if hacks %}
+            {%  for hack in hacks %}
             <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
               <div class="mdl-card__media">
-                <img src="images/more-from-1.png">
+                {% if hack.cover_photo %}
+                <img src="{{ hack.cover_photo.url }}">
+                {% endif %}
               </div>
               <div class="mdl-card__title">
-                 <h4 class="mdl-card__title-text">Dumy Title</h4>
+                 <h4 class="mdl-card__title-text">{{ hack.title }}</h4>
               </div>
               <div class="mdl-card__supporting-text">
-                <span class="mdl-typography--font-light mdl-typography--subhead">Four tips to make your switch to Android quick and easy</span>
+                <span class="mdl-typography--font-light mdl-typography--subhead">{{ hack.short_description|truncatechars:100 }}</span>
               </div>
               <div class="mdl-card__actions">
-                 <a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="">
+                 <a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="{{ hack.slug }}">
                   Learn More
                    <i class="material-icons">chevron_right</i>
                  </a>
               </div>
             </div>
-
+            {% endfor %}
+            {% else %}
+            <h2>No posts available</h2>
+            {% endif %}
+<!--
             <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
               <div class="mdl-card__media">
                 <img src="images/more-from-4.png">
@@ -154,43 +162,8 @@
                    <i class="material-icons">chevron_right</i>
                  </a>
               </div>
-            </div>
+            </div> -->
 
-            <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
-              <div class="mdl-card__media">
-                <img src="images/more-from-2.png">
-              </div>
-              <div class="mdl-card__title">
-                 <h4 class="mdl-card__title-text">Dumy Titl</h4>
-              </div>
-              <div class="mdl-card__supporting-text">
-                <span class="mdl-typography--font-light mdl-typography--subhead">A clean, simple, customisable home screen that comes with the power of Google Now: Traffic alerts, weather and much more, just a swipe away.</span>
-              </div>
-              <div class="mdl-card__actions">
-                 <a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="">
-                   Learn More
-                   <i class="material-icons">chevron_right</i>
-                 </a>
-              </div>
-            </div>
-
-            <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
-              <div class="mdl-card__media">
-                <img src="images/more-from-3.png">
-              </div>
-              <div class="mdl-card__title">
-                 <h4 class="mdl-card__title-text">Dumy Titl</h4>
-              </div>
-              <div class="mdl-card__supporting-text">
-                <span class="mdl-typography--font-light mdl-typography--subhead">Hail a taxi, find a recipe, run through a temple – Google Play has all the apps and games that let you make your Android device uniquely yours.</span>
-              </div>
-              <div class="mdl-card__actions">
-                 <a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="">
-                   Learn More
-                   <i class="material-icons">chevron_right</i>
-                 </a>
-              </div>
-            </div>
           </div>
         </div>
 
