removed db and uploads folder from git cache

--- a/hacks/templates/hacks/entry.html
+++ b/hacks/templates/hacks/entry.html
@@ -106,7 +106,7 @@
                 <span>{{ hack.createdAt|naturalday }}</span>
               </div>
               <div class="section-spacer"></div>
-              <!-- <div class="meta__favorites">425 <i class="material-icons">favorite</i></div> -->
+              <div class="meta__favorites"><i class="material-icons">mode_edit</i>By {{ hack.writer.first_name }} {{ hack.writer.last_name }}</div>
               <!-- <div><i class="material-icons">bookmark</i></div> -->
               <div><a href="" onclick="fbshare()"><i class="material-icons">share</i></a></div>
             </div>
