--- a/hacks/templates/hacks/entry.html
+++ b/hacks/templates/hacks/entry.html
@@ -112,8 +112,17 @@
             </div>
             <div class="mdl-color-text--grey-700 mdl-card__supporting-text">
               <p>
-                  {{ hack.long_description }}
+                  {{ hack.long_description|safe }}
               </p>
+            </div>
+            <!-- Colored raised button -->
+            <div class="mdl-grid">
+              <a class="mdl-button mdl-js-button mdl-button--accent" href="{{ hack.github_link }}">
+              GITHUB</a>&nbsp;&nbsp;&nbsp;&nbsp;
+              <!-- Accent-colored raised button -->
+              <a class="mdl-button mdl-js-button mdl-button--accent" href="{{ hack.ppt_link}}">
+              Presentation
+            </a>
             </div>
             <!-- <div class="mdl-color-text--primary-contrast mdl-card__supporting-text comments">
               <form>
