--- a/landingsite/templates/landingsite/index.html
+++ b/landingsite/templates/landingsite/index.html
@@ -67,7 +67,7 @@
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Weekly Meetings</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/hacks/">Hacks</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">About us</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Contact us</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="/contact-us/">Contact us</a>
             </nav>
           </div>
           <!-- <button class="android-more-button mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" id="more-button">
